--- a/Ansible/docker.yaml
+++ b/Ansible/docker.yaml
@@ -1,11 +1,16 @@
 - name: docker build and push
-  hosts: docker  # Replace with the hostname or IP address of your target server
+  hosts: local  # Replace with the hostname or IP address of your target server
   become: yes  # Run tasks with sudo privileges
 
   tasks:
     - name: Update apt package cache
       apt:
         update_cache: yes   
+
+    - name: Install Docker
+      apt:
+       name: docker.io
+       state: present
 
     - name: Build Docker Image
       command: docker build -t petstore .
@@ -16,10 +21,11 @@
       command: docker tag petstore:latest lloyddigital/petstore:latest 
 
     - name: Log in to Docker Hub
-      community.docker.docker_login:
+      docker_login:
         registry_url: https://index.docker.io/v1/
         username: lloyddigital
         password: M&^*vDJw$hB4*3K6
+      register: docker_login_result
 
     - name: Push image
       command: docker push lloyddigital/petstore:latest
